try to insert alt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="score">{{item.score}} / {{item.count}}</p>
         <div class="item animated" animate-on-change="item.count">{{item.val}}</div>
         <div class="btn btn-left" ng-click="no()" ng-show="status.running"></div>
-        <div class="btn btn-game" ng-click="game()" ng-hide="status.running"></div>
+        <div class="btn btn-game" ng-click="game()"></div>
         <div class="btn btn-right" ng-click="yes()" ng-show="status.running"></div>  
 
     </body> 
